--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -53,6 +53,7 @@
 		"react-datepicker": "^2.9.6",
 		"react-dom": "^16.8.6",
 		"react-double-marquee": "^1.0.5",
-		"react-webcam": "^4.2.0"
+		"react-webcam": "^4.2.0",
+		"socket.io-client": "^2.3.0"
 	}
 }
